# noise-weighted-subspace-reconstruction

./: .gitignore  CHANGELOG.md  EXPERIMENT_PLAN.md  LICENSE  README.md  TODO.md  environment.yml  experiment_checklist.md  implementation_plan_apr20.md  kalman_filter_tutorial.ipynb  mlst_additional_experiments.ipynb  mlst_review_analysis.md  pyproject.toml
NPML/: 00_model_inventory_and_gap_map.ipynb  01_experiment_a_metric_ablation.ipynb  02_experiment_b_coverage_ablation.ipynb  03_experiment_c_nfpa_vs_empca.ipynb  04_experiment_d_architecture_bias_readiness.ipynb  05_experiment_e_prewhitened_transformer_readiness.ipynb  06_final_2x2_matrix.ipynb  README.md  __init__.py  experiments.py  generate_nfpa_geometry_page.py  generate_npml_notebooks.py  npml_support.py  plan.md  run_experiments.py
PC_component_check/: verify_empca_component_interpretation.ipynb
PC_interpretation/: clean_empca_kalpha_frequency_training_paperready.ipynb
QP_simulator/: QPSimulator.py  qp_simulator_tutorial.ipynb
TraceSimulator/: README.md  setup.py
archive/: README.md
data/: README.md
docs/: CURRENT_STATUS.md  EXPERIMENT_PROTOCOLS.md  GWOSC_FOLLOWUP_AGENT_HANDOFF.md  GWOSC_GWPY_REFERENCE.md  GWOSC_RESULT.md  README.md  REMOTE_GWOSC_AGENT_RUNBOOK.md  VALIDATION_ROADMAP.md  canonical_experiment_plan.md  dataset_access_notes.md  dataset_links_and_access.md  experiment_registry.md  limitations.md  metrics.md  paper1_validation_progress.md  preprocessing_contract.md  repo_audit.md
evidence/: README.md
experiments/: experiments_master.ipynb  mlst_additional_experiments.ipynb
src/: of.py  (+10 more)
(+698 files in other folders)
