[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-weighted-subspace-reconstruction"
version = "0.1.0"
description = "Open-source companion code for noise-weighted OF/EMPCA reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dowling Wong"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "h5py>=3.10",
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "numba>=0.59",
  "pytest>=7.0",
]
gwosc = [
  "gwosc>=0.8",
  "gwpy>=3.0",
]
paper2 = [
  "torch>=2.0",
  "wandb>=0.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
